# startorch

./: .clang-format  .gitignore  CMakeLists.txt  README.md
startorch/: CMakeLists.txt
startorch/include/darkside/: assign.cuh  assign.hpp  common.hpp  kernel.cuh  memory.hpp
startorch/include/startorch/: common.hpp  device.hpp  format.hpp  layout.hpp  logger.hpp  memory.hpp  tensor.hpp
startorch/source/darkside/: assign.cu  kernel.cu  memory.cpp
startorch/source/startorch/: device.cpp  format.cpp  layout.cpp  memory.cpp  tensor.cpp
test/: device.cpp  layout.cpp  memory.cpp
